src/scss/main.scss
@import "_normalize";
@import "_variables";


html {
  box-sizing: border-box;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-size: 16px;
  height: 100vh;
  width: 100vw;
  background-color: black;
  color: #fff;
}

.background {
  @include full-box;
  position: absolute;
  background-image: url("../assets/images/bg.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  filter: blur(5px);
}

.site {
  @include center;
  @include full-box;
  position: relative;
  background-color: rgba(0, 0, 0, 0.6);
  justify-content: space-between;
  padding: 36px;
  &__logo { @include center; }
  &__image {
    max-width: 80%;
    @media all and (-ms-high-contrast: active), (-ms-high-contrast: none) {
      /* IE10-specific styles go here */
      height: 80%;
    }
    @media screen and (min-width: $mobile-l) { max-width: 60%; }
    @media screen and (min-width: $tablet) { max-width: 50%; }
    @media screen and (min-width: $laptop) { max-width: 30%; }
    @media screen and (min-width: $laptop-l) { max-width: 50%; }
    @media screen and (min-width: $four-k) { max-width: 80%; }
  }
  &__content { @include center; }
  &__header {
    margin-bottom: 12px;
    & span { color: #addf34; }
    @media screen and (min-width: $tablet) { font-size: 2.9rem; }
    @media screen and (min-width: $laptop-l) { font-size: 4rem; }
    @media screen and (min-width: $four-k) { font-size: 6rem; }
  }
  &__paragraph {
    text-align: center;
    @media screen and (min-width: $tablet) { font-size: 1.35rem; }
    @media screen and (min-width: $laptop-l) { font-size: 2rem; }
    @media screen and (min-width: $four-k) { font-size: 3rem; }
  }
  &__link {
    color: darkorange;
  }
  &__footer {
    text-align: center;
    font-size: 0.9rem;
    @media screen and (min-width: $tablet) { font-size: 1rem; }
    @media screen and (min-width: $laptop-l) { font-size: 1.5rem }
    @media screen and (min-width: $four-k) { font-size: 2.5rem; }
  }
  @media screen and (min-width: $tablet) {
    padding-top: 5vh;
    line-height: 1.5;
  }
}

